--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     </div>                     
                 </div>
-            
+            <script src="boku-no-hero.js"></script> 
                 
 
 </body></html>
